--- a/package.json
+++ b/package.json
@@ -69,5 +69,9 @@
     "mocha": "^10.0.0",
     "typescript": "^4.7.4",
     "@vscode/test-electron": "^2.1.5"
-  }
+  },
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/forestail/savetoscrapbox.git"
+	}
 }
