--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "savetoscrapbox",
+  "license": "MIT License",
   "displayName": "SaveToScrapbox",
   "description": "Save text to your Scrapbox project.",
   "version": "1.0.0",
+  "publisher": "forestail",
   "engines": {
     "vscode": "^1.69.0"
   },
   "categories": [
     "Other"
+  ],
+  "keywords": [
+    "Scrapbox",
+    "memo",
+    "save"
   ],
   "activationEvents": [
     "onCommand:savetoscrapbox.save",
@@ -70,6 +77,7 @@
     "typescript": "^4.7.4",
     "@vscode/test-electron": "^2.1.5"
   },
+  "icon": "savetoscrapbox.ico",
   "repository": {
 		"type": "git",
 		"url": "https://github.com/forestail/savetoscrapbox.git"
